[gd_scene load_steps=5 format=3 uid="uid://c4c0f5n421dap"]

[ext_resource type="Script" path="res://Scripts/Shifting_Task_Manager.gd" id="1_84der"]
[ext_resource type="PackedScene" uid="uid://n7shkduekcq2" path="res://SubScenes/Player.tscn" id="2_bpif1"]
[ext_resource type="PackedScene" uid="uid://cdt6315of2aeu" path="res://SubScenes/Ball_Feeder.tscn" id="3_gkwkt"]
[ext_resource type="PackedScene" uid="uid://b0gg4pr11ikjn" path="res://SubScenes/MiniGoal.tscn" id="5_5brbs"]

[node name="Shifting_Task_Manager" type="Node3D"]
script = ExtResource("1_84der")
blocks = Array[int]([1, 0])

[node name="Player" parent="." instance=ExtResource("2_bpif1")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="PlaceholderBallFeederLeft" type="Node3D" parent="."]
transform = Transform3D(-0.580859, 0, 0.814004, 0, 1, 0, -0.814004, 0, -0.580859, -8, 0, 5)

[node name="BallFeeder" parent="PlaceholderBallFeederLeft" instance=ExtResource("3_gkwkt")]
_left_feeder = true

[node name="PlaceholderBallFeederRight" type="Node3D" parent="."]
transform = Transform3D(0.600671, 0, 0.799496, 0, 1, 0, -0.799496, 0, 0.600671, -8, 0, -5)

[node name="BallFeeder" parent="PlaceholderBallFeederRight" instance=ExtResource("3_gkwkt")]

[node name="PlaceholderFixation" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)

[node name="MiniGoalLeft" parent="." instance=ExtResource("5_5brbs")]
transform = Transform3D(0.970296, 0, 0.241922, 0, 1, 0, -0.241922, 0, 0.970296, -10.5, 0, 2)

[node name="MiniGoalRight" parent="." instance=ExtResource("5_5brbs")]
transform = Transform3D(0.970296, 0, -0.241922, 0, 1, 0, 0.241922, 0, 0.970296, -10.5, 0, -2)
